--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,10 @@
 <div class="footer clearfix">
-  <div class="col-md-6">
+  <div class="col-md-3">
     {{ site.footer_left }}
   </div>
   <div class="col-md-6">
+    {{ site.footer_center }}
+  <div class="col-md-3">
     {{ site.footer_right }}
   </div>
 </div>
