--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,6 +4,7 @@
   </div>
   <div class="col-md-6">
     {{ site.footer_center }}
+  </div>
   <div class="col-md-3">
     {{ site.footer_right }}
   </div>
